--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Bots replay</title>
+    <script src="gl-matrix-min.js"></script>
     <script src="main.js"></script>
 </head>
 
@@ -17,7 +18,7 @@
 
         void main(void) {
           gl_FragColor = texture2D(uSampler, vTextureCoord);
-          //gl_FragColor = vec4(1.0, 0, 0, 1.0);
+          //gl_FragColor = vec4(1.0, 0, 0.0, 1.0);
         }
     </script>
 
@@ -25,9 +26,14 @@
         attribute vec2 aVertexPosition;
         attribute vec2 aTextureCoord;
 
+        uniform mat4 perspective;
+        uniform mat4 transformation;
+
         varying vec2 vTextureCoord;
         void main(void) {
-          gl_Position = vec4(aVertexPosition, 0, 1.0);
+          gl_Position = perspective *
+            transformation *
+            vec4(aVertexPosition, 0.0, 1.0);
           vTextureCoord = aTextureCoord;
         }
       </script>
