--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         attribute vec2 aVertexPosition;
         attribute vec2 aTextureCoord;
 
-        uniform mat4 perspective;
-        uniform mat4 transformation;
+        uniform mat3 perspective;
+        uniform mat3 transformation;
 
         varying vec2 vTextureCoord;
         void main(void) {
-          gl_Position = perspective *
+          gl_Position = vec4(perspective *
             transformation *
-            vec4(aVertexPosition, 0.0, 1.0);
+            vec3(aVertexPosition, 1.0), 1.0);
           vTextureCoord = aTextureCoord;
         }
       </script>
