--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Bots replay</title>
-    <script src="gl-matrix-min.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
     <script src="main.js"></script>
 </head>
 
 <body onload="start()">
-    <canvas id="glcanvas" width="640" height="640">
+    <canvas id="glcanvas">
         Your browser does not support HTML5 canvas.
     </canvas>
     <script id="shader-fs" type="x-shader/x-fragment">
