--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="main.js"></script>
 </head>
 
-<body onload="start()">
+<body>
     <canvas id="glcanvas">
         Your browser does not support HTML5 canvas.
     </canvas>
@@ -18,7 +18,6 @@
 
         void main(void) {
           gl_FragColor = texture2D(uSampler, vTextureCoord);
-          //gl_FragColor = vec4(1.0, 0, 0.0, 1.0);
         }
     </script>
 
