--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Bots replay</title>
     <link rel="stylesheet" type="text/css" href="main.css"/>
+    <script src="utils.js"></script>
     <script src="main.js"></script>
 </head>
 
