Load all sprites

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>Bots replay</title>
-    <link rel="stylesheet" type="text/css" href="main.css"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <script src="utils.js"></script>
     <script src="main.js"></script>
 </head>
