Use correct map orientation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         uniform sampler2D uSampler;
 
         void main(void) {
-          gl_FragColor = texture2D(uSampler, vTextureCoord);
+          gl_FragColor = texture2D(uSampler, vTextureCoord).rgba;
         }
     </script>
 
