--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <label for="replay-speed-input"> Replay Speed:</label>
         <input id="replay-speed-input" type="number" value="200"></input><span style="margin-left:10px;">ms</span>
         <br>
+        <label for="player-view-input"> Show Player View:</label>
+        <input id="player-view-input" type="checkbox" ></input>
+        <br>
         <button id="replay-button" onclick="replay()">Replay</button>
         <button id="pause-button" onclick="pause()">Pause</button>
         <button id="backward-button" onclick="backward()">Back</button>
