Add results table

--- a/index.html
+++ b/index.html
@@ -37,14 +37,25 @@
 
         <table id="player-table">
             <th>ID</th>
-            <th>L</th>
             <th>S</th>
             <th>M</th>
+            <th>L</th>
         </table>
-        <div id = "single-player-controls" class="hidden">
+        <div id="single-player-controls" class="hidden">
             <label for="continues-player-view-input"> Show Player View History:</label>
             <input id="continous-player-view-input" type="checkbox"></input>
         </div>
+
+        <div id="results" class="hidden">
+            <h2>Results</h2>
+            <table id="results-table">
+                <th>ID</th>
+                <th>S</th>
+                <th>M</th>
+                <th>K</th>
+            </table>
+        </div>
+
     </div>
 
 
