--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <script src="results.js"></script>
     <script src="utils.js"></script>
     <script src="main.js"></script>
 </head>
