--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <label for="player-view-input"> Show Player View:</label>
         <input id="player-view-input" type="checkbox"></input>
         <br>
+        <button id="raw-button" onclick="getRawData()">Raw Data</button>
         <button id="replay-button" onclick="replay()">Replay</button>
         <button id="pause-button" onclick="pause()">Pause</button>
         <button id="backward-button" onclick="backward()">Back</button>
         <button id="play-button" onclick="play()">Play</button>
         <button id="forward-button" onclick="forward()">Next</button>
+
 
         <table id="player-table">
             <th>ID</th>
