Add dots and update README.md

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <label for="player-view-input"> Show Player View:</label>
         <input id="player-view-input" type="checkbox"></input>
         <br>
+        <label for="dot-view-input"> Show dots:</label>
+        <input id="dot-view-input" type="checkbox"></input>
+        <br>
         <button id="raw-button" onclick="getRawData()">Raw Data</button>
         <button id="replay-button" onclick="replay()">Replay</button>
         <button id="pause-button" onclick="pause()">Pause</button>
